--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~6.0.6",
     "@angular/router": "~6.0.6",
     "nativescript-angular": "~6.0.6",
+    "nativescript-drop-down": "^4.0.1",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-ui-sidedrawer": "^4.3.0",
     "reflect-metadata": "~0.1.10",
