--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "nativescript": {
     "id": "org.nativescript.ProjectLnativeScript",
     "tns-android": {
-      "version": "4.1.3"
+      "version": "4.2.0"
     }
   },
   "dependencies": {
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "~6.0.6",
     "@angular/router": "~6.0.6",
     "nativescript-angular": "~6.0.6",
+    "nativescript-background-http": "^3.3.0",
+    "nativescript-camera": "^4.0.2",
     "nativescript-drop-down": "^4.0.1",
+    "nativescript-imagepicker": "^6.0.4",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-ui-sidedrawer": "^4.3.0",
     "reflect-metadata": "~0.1.10",
