--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nativescript-drop-down": "^4.0.1",
     "nativescript-imagepicker": "^6.0.4",
     "nativescript-theme-core": "~1.0.4",
+    "nativescript-ui-listview": "^3.7.1",
     "nativescript-ui-sidedrawer": "^4.3.0",
     "reflect-metadata": "~0.1.10",
     "rxjs": "~6.1.0",
