--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nativescript-camera": "^4.0.2",
     "nativescript-drop-down": "^4.0.1",
     "nativescript-imagepicker": "^6.0.4",
+    "nativescript-pro-ui": "^3.4.1",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-ui-listview": "^3.7.1",
     "nativescript-ui-sidedrawer": "^4.3.0",
