--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nativescript-angular": "~6.0.6",
     "nativescript-background-http": "^3.3.0",
     "nativescript-camera": "^4.0.2",
+    "nativescript-checkbox": "^3.0.3",
     "nativescript-drop-down": "^4.0.1",
     "nativescript-imagepicker": "^6.0.4",
     "nativescript-theme-core": "~1.0.4",
