--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nativescript-angular": "8.0.2",
     "nativescript-background-http": "^3.3.0",
     "nativescript-camera": "^4.0.2",
+    "nativescript-chatview": "^1.0.3",
     "nativescript-checkbox": "^3.0.3",
     "nativescript-drop-down": "^4.0.1",
     "nativescript-imagepicker": "^6.0.4",
